fixed home page and nav bar on mobile

--- a/static/css/pages/index.css
+++ b/static/css/pages/index.css
@@ -1,15 +1,38 @@
-body{
+body, html{
     overflow-x: hidden;
+    height: 100%;
 }
 .index__background-image{
     background-image: url("../../img/backgrounds/stocks-1.webp");
-    background-position: -40px -70px;
-    background-repeat: no-repeat;
 }
 
-.index__top-banner{
-    padding: 60px;
-}
+
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../img/backgrounds/stocks-1.webp");
+    height: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+  
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    transform: translate(-35%, -50%);
+    color: white;
+  }
+  
+  .hero-text a {
+    margin: 30px;
+  }
+  
+  .hero-text a:hover {
+    background-color: white !important;
+    color: #3b3b3b;
+  }
 
 .index__top-banner p{
     color: #ffffff;
@@ -66,37 +89,3 @@ body{
     margin: 0 15%;
 }
 
-.index__account-box, 
-.index__account-box--light, 
-.index__account-box--dark {
-    background-color: #D4D4D2;
-    font-family: helvetica;
-    font-size: 35px;
-    text-align: center;
-    padding: 40px;
-    height: 350px;
-}
-
-.index__account-box--light{
-    background-color: #F9F9F9;
-}
-
-.index__account-box--dark{
-    background-color: #2D3643;
-    color: #ffffff;
-}
-
-.index__account-box ul, 
-.index__account-box--light ul, 
-.index__account-box--dark ul{
-    font-size: 12px;
-    text-align: left;
-    margin: 10% 20px;
-}
-
-@media only screen and (max-width: 550px) {
-    .index__background-image{
-        background-image: none;
-        background-color: #1E242E;
-    }
-}
